--- a/src/styles/avaliacoes.css
+++ b/src/styles/avaliacoes.css
@@ -1,5 +1,5 @@
 .testimonials-section {
-  background: linear-gradient(135deg, #c19ae9, #a46cd8, #8b4cc3);
+  background: linear-gradient(135deg, #d4af37, #d4af37, #d4af37);
   padding: 80px 20px;
   font-family: 'Arial', sans-serif;
   color: white;
@@ -14,7 +14,7 @@
 
 .container h2 {
   font-size: 2.5rem;
-  color: #552774;
+  color: #d4af37;
 }
 
 .testimonials-section h2 {
@@ -63,13 +63,13 @@
   height: 54px;
   border-radius: 50%;
   margin-right: 12px;
-  border: 2.5px solid #a46cd8;
+  border: 2.5px solid #d4af37;
 }
 
 .user-info h4 {
   margin: 0;
   font-size: 1.1rem;
-  color: #552774;
+  color: #d4af37;
 }
 
 .user-info span {
@@ -93,7 +93,7 @@
   flex-wrap: wrap;
   justify-content: center;
   gap: 40px;
-  background-color: #a46cd8;
+  background-color: #d4af37;
   padding: 40px 20px;
   color: white;
   text-align: center;
