--- a/src/styles/inicio.css
+++ b/src/styles/inicio.css
@@ -1,7 +1,8 @@
 .hero-section {
   height: 100vh;
   width: 100%;
-  background-image: url('../../imagens/fundo_1.png');
+
+   background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('../../imagens/fundo_1.png');
   background-size: cover;
   background-position: center center; /* Posição inicial para telas maiores */
   display: flex;
